Bug 1002306: don't accidentally disable non-H264 codecs in the OMX code r=ekr a=sylvestre