media/webrtc/signaling/src/media/VcmSIPCCBinding.cpp
@@ -2120,33 +2120,41 @@ static int vcmEnsureExternalCodec(
     mozilla::VideoCodecConfig* config,
     bool send)
 {
+  if (config->mName == "VP8") {
+    // whitelist internal codecs; I420 will be here once we resolve bug 995884
+    return 0;
 #ifdef MOZ_WEBRTC_OMX
-  // Here we use "I420" to register H.264 because WebRTC.org code has a
-  // whitelist of supported video codec in |webrtc::ViECodecImpl::CodecValid()|
-  // and will reject registration of those not in it.
-  // TODO: bug 995884 to support H.264 in WebRTC.org code.
-  if (config->mName != "I420") {
-    // Do nothing for non-I420 config.
+  } else if (config->mName == "I420") {
+    // Here we use "I420" to register H.264 because WebRTC.org code has a
+    // whitelist of supported video codec in |webrtc::ViECodecImpl::CodecValid()|
+    // and will reject registration of those not in it.
+    // TODO: bug 995884 to support H.264 in WebRTC.org code.
+
+    // Register H.264 codec.
+    if (send) {
+      VideoEncoder* encoder = OMXVideoCodec::CreateEncoder(OMXVideoCodec::CodecType::CODEC_H264);
+      if (encoder) {
+        return conduit->SetExternalSendCodec(config->mType, encoder);
+      } else {
+        return kMediaConduitInvalidSendCodec;
+      }
+    } else {
+      VideoDecoder* decoder = OMXVideoCodec::CreateDecoder(OMXVideoCodec::CodecType::CODEC_H264);
+      if (decoder) {
+        return conduit->SetExternalRecvCodec(config->mType, decoder);
+      } else {
+        return kMediaConduitInvalidReceiveCodec;
+      }
+    }
+    NS_NOTREACHED("Shouldn't get here!");
+#else
+  } else if (config->mName == "I420") {
+    return 0;
+#endif
+  } else {
+    CSFLogError( logTag, "%s: Invalid video codec configured: %s", __FUNCTION__, config->mName.c_str());
     return send ? kMediaConduitInvalidSendCodec : kMediaConduitInvalidReceiveCodec;
   }
-  // Register H.264 codec.
-  if (send) {
-    VideoEncoder* encoder = OMXVideoCodec::CreateEncoder(OMXVideoCodec::CodecType::CODEC_H264);
-    if (encoder) {
-      return conduit->SetExternalSendCodec(config->mType, encoder);
-    } else {
-      return kMediaConduitInvalidSendCodec;
-    }
-  } else {
-    VideoDecoder* decoder = OMXVideoCodec::CreateDecoder(OMXVideoCodec::CodecType::CODEC_H264);
-    if (decoder) {
-      return conduit->SetExternalRecvCodec(config->mType, decoder);
-    } else {
-      return kMediaConduitInvalidReceiveCodec;
-    }
-  }
-  NS_NOTREACHED("Shouldn't get here!");
-#endif
 
   return 0;
 }
